--- a/index.css
+++ b/index.css
@@ -70,7 +70,7 @@
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     color: var(--txt-color);
     text-align: left;
-    font-size: 10px;
+    font-size: 8px;
   }
   .heart {
     position: absolute;
@@ -121,7 +121,7 @@
     transform: translateX(-50%);
     /* color: var(--txt-color); */
     color: #fff;
-    font-size: 11px;
+    font-size: px;
     font-weight: lighter;
   }
   .envelope-wrapper > .click-me {
